<resources>
    <string name="app_name">E. Quotebook</string>
    <string name="banner_ad_unit_id">ca-app-pub-1832954170852232/3364450909</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_post">Add post</string>

    <string name="app">Entrepreneur Quotebook</string>
    <string name="placeholder_text">post title goes here</string>
    <string name="share_btn">Share</string>
    <string name="image">image</string>
    <string name="sharedvia">Shared via the Entrepreneur Quotebook app. Download it from Play-store(FREE). https://goo.gl/kTgbSH</string>
    <string name="share">Share App</string>
    <string name="share_img">Share</string>
    <string name="about_image">about image</string>
    <string name="developed_by_tigon_studios">Developed by Tigon Studios</string>
    <string name="contact_us_tigonstudios1_gmail_com">Contact us: tigonstudios1@gmail.com</string>
    <string name="note_this_application_requires_an_active_internet_connection">Note: This application requires an active internet connection.</string>
    <string name="disclaimer_all_the_images_used_in_this_app_belongs_to_their_respective_owners">Disclaimer: All the images used in this app belongs to their respective owners.</string>
    <string name="ads_toast">Time is money.</string>
    <string name="time">Time is money.</string>
    <string name="about_toast">Ah huh, curios.</string>
    <string name="share_toast"><![CDATA[Thanks, I love you <3]]></string>
    <string name="rate_toast">Trust me, I\'m a 6 but hope my app\'s not</string>
    <string name="logout_toast">We\'ll be waiting.</string>
    <string name="promotion_toast">Hope we do good business</string>
    <string name="shared_toast">Getting motivated made easier. Download the Entrepreneur Quotebook app (Free) from Play-store. Click here: https://goo.gl/kTgbSH</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="log_out">Log Out</string>
    <string name="extras">Extras</string>
    <string name="sharing_is_caring">Sharing is caring.</string>
    <string name="why_annoyings_ads">Why annoyings ads?</string>
    <string name="promote_your_business_here">Promote your business here.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privact_toast">Staying Secure?</string>
    <string name="ads_activity">Advertisements help us pay for the maintaince of the database and buy some PIZZA.</string>
    <string name="bye">Bye</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_error">You don\'t have any app that can open this link</string>
    <string name="rate">Enjoying Entrepreneur Quotebook?</string>
    <string name="rate_feed">Would you mind rating it? It will only take you a few seconds, but will go a far way for us :)</string>
    <string name="l">Later</string>
    <string name="rate_b">Rate it!</string>
    <string name="promote">Promote your business here.</string>
    <string name="explaination">We can place your content in our app\'s feed that can reach thousands of people daily. Please send us an e-mail and we can discuss pricing</string>
    <string name="email_1">tigonstudios1@gmail.com</string>
    <string name="email_subject">Promotion</string>
    <string name="contact_us">Contact Us</string>
    <string name="promotion">Promotional Content</string>
    <string name="share_b">Share</string>
    <string name="post_title_goes_here">post title goes here</string>
    <string name="ok">OK</string>
    <string name="post_feature">Chillaxx, we are too busy playing PlayStation,post feature will be coming soon.</string>
    <string name="coming">Post: Coming Soon</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="submit">Submit</string>
    <string name="setup_your_account">Setup your account</string>
    <string name="welcome">Welcome to Entrepreneur Quotebook, We can\'t wait to have you! Just enter your name and hit Submit and you are in!</string>
    <string name="made_with_love_in_india_and_israel">Made with love in India and Israel.</string>
    <string name="entrepreneur_quotebook">Entrepreneur Quotebook</string>
    <string name="title_activity_signup">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short_1">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered to Entrepreneur Quotebook now!</string>
    <string name="btn_link_to_login">Already Registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="loading">Loading…</string>
    <string name="uhome">You are home</string>
    <string name="register">Please enter your registered e-mail id</string>
    <string name="instructions">We have sent you instructions to reset your password!</string>
    <string name="failed">Failed to send reset email!</string>
    <string name="privacy">Privacy Policy</string>
    <string name="emailhint">Email</string>
    <string name="password">Password</string>
    <string name="enterpass">Enter password!</string>
    <string name="enteremail">Enter email address!</string>
    <string name="made_love">Made with love in India and Israel</string>
    <string name="entrepreneu">Entrepreneur Quotebook</string>
    <string name="background_image" />
    <string name="by_supernerd_studios">Developed by SuperNerd Studios.</string>
    <string name="email_enter">Enter email address!</string>
    <string name="password_enter">Enter password!</string>
    <string name="auth_faile">Authentication failed.</string>
</resources>
