<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/aboutPic"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/about_image"
        android:paddingTop="12dp"
        android:src="@drawable/ic_launcher_min"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutPic"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:padding="16dp"
        android:text="@string/developed_by_tigon_studios"

        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="8dp"
        android:text="@string/disclaimer_all_the_images_used_in_this_app_belongs_to_their_respective_owners"
        android:textAlignment="center"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="serif"
        android:text="@string/contact_us_tigonstudios1_gmail_com"
        android:textIsSelectable="true"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/note_this_application_requires_an_active_internet_connection"
        android:textSize="12sp" />

</RelativeLayout>