<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/post_image"
            android:src="@mipmap/add_btn"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/post_title"
            android:text="@string/placeholder_text"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_below="@+id/post_image"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_share"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/post_title"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:elevation="0dp"
            android:text="@string/share_img"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>